# terminal_adventure

./: .gitignore  Cargo.toml  LICENSE  README.md  backup_logic.txt
assets/: Houses.aseprite  terminal_world.ldtk
assets/diagrams/: .$event_system.drawio.bkp  event_system.drawio
assets/doomcryptkit/DoomcryptKit/: License.txt
assets/workers/: workers1.aseprite
automated_tests/src/: lib.rs
dialogue_factory/: Cargo.toml
dialogue_factory/src/: lib.rs
entity_factory/: Cargo.toml
entity_factory/src/: lib.rs
entity_factory_abandoned/: Cargo.toml
entity_factory_abandoned/src/: lib.rs
src/: assets.rs  debug.rs  main.rs  main_menu.rs  menu_cursor.rs  selection.rs  states.rs
src/board/: components.rs  mod.rs  systems.rs  vectors.rs
src/graphics/: assets.rs  graphics.rs  mod.rs  tiles.rs
src/world/: abstract_world_builder.rs  farm.rs  mod.rs  non_playable_char.rs  player.rs  world_builder.rs
src/world/entity_loader/: mod.rs
src/world/entity_loader/battle_system/: mod.rs
src/world/entity_loader/dice_system/: mod.rs
src/world/entity_loader/enemy/: mod.rs
src/world/entity_loader/event_system/: dice.rs  mod.rs
src/world/entity_loader/graph_system/: mod.rs
src/world/entity_loader/npc/: mod.rs
src/world/entity_loader/player/: mod.rs
src/world/entity_loader/player_dice_system/: mod.rs
