workspace = { members = ["dialogue_factory", "entity_factory"] }
[package]
name = "terminal_overlord"
author = "Ariel Aybar"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: Remember to revert this before releasing your game! 
# Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. 
# If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_aseprite = "0.12.0"
bevy_ecs_ldtk = "0.9.0"
bevy_text_mode = "0.3.0"
dialogue_factory = { path = "dialogue_factory" } # from a path in the local filesystem
