workspace = { members = ["dialogue_factory"] }
[package]
name = "terminal_overlord"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
# NOTE: Remember to revert this before releasing your game!
# Otherwise you will need to include libbevy_dylib alongside your game if you want it to run.
# If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.17.0", features = ["dynamic_linking"] }
bevy_ecs_ldtk = "0.13"
bevy_text_popup = "0.7.0"
bevy_northstar = "0.5.0"
dialogue_factory = { path = "dialogue_factory" }            # from a path in the local filesystem
dice-bag = "0.2.0"
libudev-sys = "0.1.4"
name_maker = "0.1.1"
rand = "0.9.2"
random_name_generator = "0.3.6"
grid_util = "0.2.0"
